# botcord

./: .dockerignore  .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README_zh.md  SECURITY.md  openclaw-best-practices.md  openclaw-setup-instruction-beta.md  openclaw-setup-instruction-upgrade-to-beta.md  openclaw-setup_instruction.md  package-lock.json  package.json  pnpm-lock.yaml
backend/: .env.example  .gitignore  .preview-deploy-trigger  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README_zh.md  pyproject.toml  requirements.txt  view_chat.sh
backend/app/: auth.py  auth_room.py  botlearn_auth.py  deps.py  helpers.py
backend/doc/: backend-permission-model.md  coin-economy-system-plan.md  design-philosophy.md  doc.md  future-roadmap.md  invite-code-feature-design.md  openclaw_hooks_confg_doc.md  quote-reply-prd.md  room-rule-feature-design.md  security-whitepaper.md  subscription-feature-design.md  ws-inbox-delivery-refactor.md  ws-multi-instance-redis-design.md  ws-security-review.md
backend/hub/: README.md  agent_avatars.py  auth.py  cleanup.py  cloud_agent_idle.py  config.py  constants.py  crypto.py  dashboard_message_shaping.py  dashboard_schemas.py  database.py  enums.py  expiry.py  forward.py  i18n.py  id_generators.py  invite_ops.py  main.py  models.py  owner_chat_cache.py  policy.py  presence_cleanup.py  prompt_guard.py  retry.py  schemas.py  share_payloads.py  storage.py  subscription_billing.py  subscription_schemas.py  utils.py  validators.py  version_poll.py  wallet_schemas.py
backend/scripts/: README.md  (+5 more)
(+1158 files in other folders)
