[package]
name = "botcord-desktop"
version = "0.1.0"
description = "BotCord desktop daemon control panel"
authors = ["BotCord"]
edition = "2021"

[lib]
name = "botcord_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
